kubernetes-cncf/module-7/assets/resources/namespace-with-labels.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    contact: sylus
    business-unit: devops
